@@ -1,1 +1,1 @@
-buildd-slave-example.conf
+buildd-example.conf
