@@ -25,7 +25,7 @@ Environment=BUILDD_CONFIG=/etc/launchpad-buildd/%i
 # machines, edit /etc/default/launchpad-buildd.
 ExecStartPre=/usr/bin/test ${RUN_NETWORK_REQUESTS_AS_ROOT} = yes
 ExecStartPre=/usr/bin/install -d /home/buildd/filecache-default
-ExecStart=/usr/bin/twistd3 --no_save --pidfile /run/launchpad-buildd/%i.pid --python /usr/lib/launchpad-buildd/buildd-slave.tac --logfile /var/log/launchpad-buildd/%i.log --umask 022 --nodaemon
+ExecStart=/usr/bin/twistd3 --no_save --pidfile /run/launchpad-buildd/%i.pid --python /usr/lib/launchpad-buildd/buildd.tac --logfile /var/log/launchpad-buildd/%i.log --umask 022 --nodaemon
 
 [Install]
 WantedBy=multi-user.target
